# NodeInfra

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  CONTRIBUTING.md  LICENSE  M1_PROGRESS.md  MILESTONE_PLAN.md  Makefile  README.md  pyproject.toml  validator-infrastructure-redesign-v2.md
.github/workflows/: lint.yml
charts/movement-fullnode/: Chart.yaml  values.yaml
charts/movement-fullnode/templates/: _helpers.tpl  (+6 more)
charts/movement-node/: Chart.yaml  README.md  values.yaml
charts/movement-validator/: Chart.yaml  values.yaml
charts/prometheus-agent/: Chart.yaml  values.yaml
configs/: testnet.pfn-restore.yaml
examples/hello-world/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
examples/public-fullnode/: .env.example  .terraform.lock.hcl  README.md  deploy.py  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
examples/validator-vfn/: .env.example  .terraform.lock.hcl  README.md  deploy.py  deploy.py.backup  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: cleanup-test-vpcs.sh  cleanup-vpcs.sh  list-vpcs.sh
terraform-modules/kubernetes-aptos-node/: main.tf  outputs.tf  variables.tf  versions.tf
terraform-modules/movement-ingress/: iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-modules/movement-network-base/: README.md  dns.tf  main.tf  outputs.tf  security-groups.tf  variables.tf  vpc.tf
terraform-modules/movement-validator-infra/: .terraform.lock.hcl  README.md  eks.tf  iam.tf  main.tf  node-group.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
tests/integration/: test-hello-world.sh  test_public_fullnode.py  test_validator_vfn.py
tools/: README.md  __init__.py  cli.py  cluster.py  eks.py  helm.py  terraform.py  utils.py  validation.py
(+24 files in other folders)
