[tool.poetry]
name = "nodeinfra"
version = "0.1.0"
description = "Integration tooling for Movement NodeInfra"
authors = ["Movement Infrastructure Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
kubernetes = "^29.0.0"
boto3 = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
